<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/layout_menu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:name="com.iarigo.water.ui.fragment_main.MainFragment"
        tools:layout="@layout/fragment_main" />

    <LinearLayout
        android:id="@+id/layout_menu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:weightSum="1"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/menu_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content">

        <ImageView
            android:id="@+id/menu_main"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_baseline_water_drop_24"
            android:layout_weight=".2"
            android:contentDescription="@string/menu_water" />

        <ImageView
            android:id="@+id/menu_water"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_baseline_equalizer_24"
            android:layout_weight=".2"
            android:contentDescription="@string/menu_water_stat" />

        <ImageView
            android:id="@+id/menu_weight"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_baseline_balance_24"
            android:layout_weight=".2"
            android:contentDescription="@string/menu_weight" />

        <ImageView
            android:id="@+id/menu_settings"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_baseline_settings_24"
            android:layout_weight=".2"
            android:contentDescription="@string/menu_settings" />

        <ImageView
            android:id="@+id/menu_notifications"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_baseline_notifications_24"
            android:layout_weight=".2"
            android:contentDescription="@string/menu_notifications" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>