<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/settings_checkbox"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical|center"
        android:text="@string/main_title"
        android:textColor="#1565C0"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/layout_water"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_water"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@color/water_total"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <TextView
            android:id="@+id/water_today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_water_count"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@+id/water_count"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_water">

        <ImageView
            android:id="@+id/drunk"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/white_wine_glass_1"
            android:layout_gravity="top|center_horizontal"
            android:contentDescription="@string/main_water_description"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/water_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        android:background="@drawable/drink_count_corner"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_baseline_emoji_emotions_24"
            android:contentDescription="@string/main_water_count_now_description" />

        <TextView
            android:id="@+id/water_per_once"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/main_water_count_now"
            android:textColor="#039BE5"
            android:textSize="24sp" />
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/main_water_description"
        android:src="@drawable/ic_baseline_local_drink_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>